# pyniri

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: measure_app_startup_speed.py
src/pyniri/: __init__.py  ipc.py
